<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	
	
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<Button
		android:id="@+id/main_logout_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|center"
		android:text="@string/logout" />
	
	<Button
		android:id="@+id/main_newChat_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/new_chat"
		android:layout_gravity="bottom|end" />
	
	<Button
		android:id="@+id/main_deleteChats_button2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|start"
		android:text="@string/delete" />
	
	<Button
		android:id="@+id/main_log_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center|end"
		android:text="@string/log" />
	
	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appbar_main"
		
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<com.google.android.material.appbar.CollapsingToolbarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/purple_200"
			
			android:textAlignment="textEnd"
			
			app:contentScrim="@color/teal_200"
			app:layout_scrollFlags="scroll|exitUntilCollapsed"
			app:toolbarId="@+id/toolbar">
			
			
			<TextView
				android:id="@+id/main_title_textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/title"
				android:textSize="40sp" />
		
		</com.google.android.material.appbar.CollapsingToolbarLayout>
	</com.google.android.material.appbar.AppBarLayout>
	
	<androidx.core.widget.NestedScrollView
		android:id="@+id/nestedScrollView"
		android:layout_width="match_parent"
		android:background="@color/white"
		android:layout_height="match_parent"
		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:context=".activities.MainActivity" >
			
			<ListView
				android:id="@+id/main_chats_listView"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	
	</androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>